# rag

./: .env_template  .gitignore  README.md  main.py  pyproject.toml
config/: litellm.yaml  main.yaml
config/task/: compare.yaml  corpus.yaml  rag.yaml  sft.yaml
config/task/method/: dualrag.yaml  flare.yaml  genground.yaml  ircot.yaml  lazykrag.yaml  metarag.yaml  native.yaml  oracle.yaml
scripts/: .sync_exclude  cal_tokens.py  download.py  eval.py  eval_retrieve.py  exp_retrieve.py  logs.py  rsync-sync.sh  sft_data.py  sft_data1.py  sft_data2.py  sft_data3.py  sft_data_gt.py  tmp.py
server/embedder/: embedder.py  run.sh
server/ner/: ner.py  run.sh
server/nli/: nli.py  nli_small.py  run.sh
server/rerank/: reranker.py  run.sh
server/retriever/: retriever.py  run.sh
server/vllm/: run_llama70b.sh  run_mistral.sh  run_qwen.sh
src/corpus/: 2wikimultihopqa.py  __init__.py  flashrag.py  hotpotqa.py  multihopqa.py  musique.py  utils.py  wikipedia.py
src/dataset/: 2wikimultihopqa.py  __init__.py  asqa.py  bamboogle.py  dataset.py  eli5.py  flashragQA.py  hotpotqa.py  multihopqa.py  musique.py  nq.py  popqa.py  strategyqa.py  utils.py
src/dataset/raw/: multihop.py  wiki.py
src/evaluator/: __init__.py  end2end.py  ms.py  retrieve.py
src/finetune/: __init__.py  data.py
src/rag/: __init__.py
src/rag/base/: __init__.py  qa.py
src/rag/duralrag/: __init__.py  doc.py  prompt.py  rag.py
src/rag/flare/: __init__.py  rag.py
src/startup/: __init__.py  builder.py  compare.py  run_corpus.py  run_rag.py
src/tools/: __init__.py  costmanager.py
(+36 files in other folders)
